--- a/spa/src/app/app.component.html
+++ b/spa/src/app/app.component.html
@@ -45,7 +45,9 @@
             <mat-nav-list>
                 <!-- <a mat-list-item routerLink="." *ngFor="let option of options">{{ option }}</a> -->
                 <a mat-list-item routerLink="/login" onclick="$('#cover-spin').show(0)">Login</a>
-                <a mat-list-item routerLink="/registration" onclick="$('#cover-spin').hide(0)">Registrar!</a>
+                <a mat-list-item routerLink="/registration" onclick="$('#cover-spin').hide(0)">Registrar</a>
+                <a mat-list-item routerLink="/roles" onclick="$('#cover-spin').hide(0)">Roles</a>
+                <a mat-list-item routerLink="/permissions" onclick="$('#cover-spin').hide(0)">Roles x Permissions</a>
             </mat-nav-list>
         </mat-sidenav>
 
