--- a/spa/src/theme.scss
+++ b/spa/src/theme.scss
@@ -1,25 +1,3 @@
-// @import "~@angular/material/theming";
-// @include mat-core();
-
-// // $my-primary: mat-palette($mat-blue, 700);
-// // $my-accent: mat-palette($mat-pink, 500, 900, A100);
-// // $my-warn: mat-palette($mat-red, 500);
-
-// $my-primary: mat-palette($mat-blue, 700);
-// $my-accent: mat-palette($mat-pink, 500, 900, A100);
-// $my-warn: mat-palette($mat-red, 500);
-
-// $my-theme: mat-light-theme($my-primary, $my-accent, $my-warn);
-
-// @include angular-material-theme($my-theme);
-
-// .alternative-theme { // Colocar como classe na Div
-//   $alternate-primary: mat-palette($mat-light-blue);
-//   $alternate-accent: mat-palette($mat-yellow, 400);
-//   $alternate-theme: mat-light-theme($alternate-primary, $alternate-accent);
-//   @include angular-material-theme($alternate-theme);
-// }
-
 @import "~@angular/material/theming";
 
 // Be sure that you only ever include 'mat-core' mixin once!
@@ -103,3 +81,7 @@ $my-theme: mat-light-theme($my-palette-primary, $my-palette-accent);
 
 // include the custom theme object into the angular material theme
 @include angular-material-theme($my-theme);
+
+
+// import in the bootstrap SASS file
+// @import '../node_modules/bootstrap/scss/bootstrap'
