Add Facebook Login Option

--- a/spa/src/app/components/registration/registration.component.html
+++ b/spa/src/app/components/registration/registration.component.html
@@ -77,6 +77,11 @@
           Cadastre-se
         </button>
       </div>
+      <p>
+        <a class="btn btn-primary btn-lg" href="#" role="button" routerLink="/login/facebook">
+          Signup/login with facebook
+        </a>
+      </p>
     </div>
   </form>
 </div>
