--- a/spa/src/app/components/shared/page/page.component.html
+++ b/spa/src/app/components/shared/page/page.component.html
@@ -8,6 +8,7 @@
       <a mat-list-item routerLink="/registration">Registrar</a>
       <a mat-list-item routerLink="/roles">Roles</a>
       <a mat-list-item routerLink="/permissions">Roles x Permissions</a>
+      <a mat-list-item routerLink="/login/facebook">Facebook Login</a>
     </mat-nav-list>
   </mat-sidenav>
 
