--- a/spa/src/styles.scss
+++ b/spa/src/styles.scss
@@ -31,7 +31,7 @@ body {
 // custom styling for all FontAwesome icons
 i.fas,
 i.fab {
-  color: $icon-color;
+  color: $icon-default;
 }
 
 $theme-colors: (
