--- a/spa/src/variables.scss
+++ b/spa/src/variables.scss
@@ -1,7 +1,9 @@
-$body-bg: #ffffff;
-$body-text: #000000;
+$body-light: #ffffff;
+$body-dark: #000000;
 
-$primary: #2196f3;
-$secondary: pink;
+$text-light: #ffffff;
+$text-dark: #000000;
 
-$icon-color: #2196f3; 
+$icon-default: #2196f3;
+$icon-light: #ffffff;
+$icon-dark: #000000;
