--- a/spa/src/app/components/shared/header/header.component.scss
+++ b/spa/src/app/components/shared/header/header.component.scss
@@ -1,3 +1,8 @@
+@import "../../../../variables.scss";
+
+$mat-button-size: 32px;
+$mat-icon-size: 24px;
+
 .toolbar {
   box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.2),
     0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12);
@@ -7,4 +12,25 @@
 
 .spacer {
   flex: 1 1 auto;
+}
+
+i.fas,
+i.fab {
+  color: $icon-light;
+}
+
+.mat-button.small {
+  min-width: $mat-button-size;
+  width: $mat-button-size;
+  height: $mat-button-size;
+  line-height: $mat-button-size;
+  vertical-align: middle;
+  padding: 0 0;
+
+  .mat-icon {
+    font-size: $mat-icon-size;
+    width: $mat-icon-size;
+    height: $mat-icon-size;
+    line-height: $mat-icon-size;
+  }
 }
